force-app/main/default/objects/Lead_Platform_Event__e/Lead_Platform_Event__e.object-meta.xml
<CustomObject>
    <label>Lead Platform Event</label>
    <pluralLabel>Lead Platform Events</pluralLabel>
</CustomObject>