force-app/main/default/objects/Lead_Platform_Event__e/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>FirstName</label>
    <length>10</length>
    <type>Text</type>
</CustomField>